--- a/CVRPTW/CVRPTW.vcxproj.filters
+++ b/CVRPTW/CVRPTW.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="CVRPTW.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="remake_greedy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="index.txt">
